update: fix some broken layout style and image url

--- a/site/_scss/layout/_archive.scss
+++ b/site/_scss/layout/_archive.scss
@@ -12,7 +12,6 @@
   }
   time {
     display: inline-block;
-    width: 10rem;
     text-align: right;
     font-family: $sans;
     font-size: 90%;
