--- a/site/_scss/layout/_post.scss
+++ b/site/_scss/layout/_post.scss
@@ -197,6 +197,10 @@
       @include opacity(.8);
     }
   }
+  figure {
+    margin-bottom: 1rem;
+    text-align: center;
+  }
 }
 
 .post-comment {
